--- a/characters/geometry.css
+++ b/characters/geometry.css
@@ -1,23 +1,99 @@
 body{
     margin: 0px;
-    background-color: black;
 }
 
 /*Верхняя панель*/
 .header{
+    position: relative;
     top: 0px;
     left: 0px;
     right: 0px;
-    height: 45px;
-    background-color: beige;
+    height: 45px; /*Высота верхней линии. Также нужно поменять внизу*/
+    background-color: #252525;
+    background: linear-gradient(to top, #202020, #333333);
+    border: 4px solid black;
 }
 
 /*Панель-превью робота*/
 .preview{
+    height: calc(100vh - 45px); /*Тут поменять правое число*/
+    position: relative;
     left: 0px;
     right: 0px;
-    height: calc(100vh - 45px);
-    background-color: skyblue;  
+    background-color: #252525; 
+    background: radial-gradient(#262626, #151515);
+}
+
+.preview_up-shadow{
+    position: absolute;
+    top: 0px;
+    height: 10px;
+    left: 0px;
+    right: 0px;
+    background-color: #0006;
+}
+
+.preview_bricks{
+    position: absolute;
+    top:0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    background-image: url(../images/bricks-background.png);
+    background-size: 8px 8px;
+}
+
+.preview_character{
+    position: absolute;
+    width: 100%;
+    top: 20px;
+    bottom: 260px;
+}
+
+.preview_character_image{
+    position: absolute;
+    align-content: center;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin: auto;
+    
+    height: 70%;
+}
+
+.preview_name{
+    position: absolute;
+    bottom: 160px;/*Расстояние от текста с лозунгом до низа превью*/
+    right: 50px;
+    left: 50px;
+    text-align: center;
+    font-size: 150%;
+}
+
+.preview_name_h{
+    margin: -30px;
+    color: #EEE;
+    font-size: 400%;
+}
+
+.preview_name_losung{
+    margin: -10px;
+    color: #888;
+    font-size: 200%;
+}
+
+.preview_panel{
+    position: absolute;
+    height: 80px;
+    bottom: 60px;/*Расстояние от иконок до низа превью*/
+    right: 50px;
+    left: 50px;
+    text-align: center;
+}
+
+.preview_panel_image{
+    height: 100%;
 }
 
 /*Остальная информация о роботе*/
@@ -31,15 +107,32 @@ body{
     align-content: center;
     left: 0px;
     right: 0px;
-    max-width: 1100px; /*Ширина центра. Возможно придется настраивать*/
+    max-width: 1000px; /*Ширина центральной части с инфой.*/
     margin: auto;
     background-color: lightgray;
 }
 
 /*Нижняя панель с информацией*/
 .bottom{
+    position: relative;
     left: 0px;
     right: 0px;
-    height: 50px;
-    background-color: darkblue;
+    height: 100px;
+    background-color: #222;
+    background: linear-gradient(#181818, #000);
+}
+
+.bottom_text{
+    text-align: center;
+    vertical-align: middle;
+    color: #777;
+    font-size: 150%;
+    
+    position: absolute;
+    top: 10px;
+    bottom: 10px;
+    left: 0px;
+    right: 0px;
+    margin: auto;
+    max-width: 700px;
 }
