--- a/characters/geometry.css
+++ b/characters/geometry.css
@@ -2,6 +2,61 @@ body{
     margin: 0px;
 }
 
+/*Общие элементы*/
+.split-line{
+    height:8px;
+    border-width:0;
+    color:black;
+    background-color:black;
+    margin: 0px;
+}
+
+.background-bricks{
+    position: absolute;
+    top:0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    background-image: url(../images/bricks-background.png);
+    background-size: 14px 14px;
+}
+
+.shadow-linear--top{
+    position: absolute;
+    height: 400px;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    background: linear-gradient(to top, #0000 60%, #0003);
+}
+
+.shadow-linear--bottom{
+    position: absolute;
+    height: 400px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    background: linear-gradient(to bottom, #0000 60%, #0003);
+}
+
+.shadow-linear--right{
+    position: absolute;
+    width: 350px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    background: linear-gradient(to right, #0000 60%, #0003);
+}
+
+.shadow-linear--left{
+    position: absolute;
+    width: 350px;
+    left: 0px;
+    top: 0px;
+    bottom: 0px;
+    background: linear-gradient(to left, #0000 60%, #0003);
+}
+
 /*Верхняя панель*/
 .header{
     position: relative;
@@ -11,17 +66,18 @@ body{
     height: 45px; /*Высота верхней линии. Также нужно поменять внизу*/
     background-color: #252525;
     background: linear-gradient(to top, #202020, #333333);
-    border: 4px solid black;
+    border: 8px solid black;
 }
 
 /*Панель-превью робота*/
 .preview{
     height: calc(100vh - 45px); /*Тут поменять правое число*/
+    min-height: 600px;
     position: relative;
     left: 0px;
     right: 0px;
     background-color: #252525; 
-    background: radial-gradient(#262626, #151515);
+    background: radial-gradient(#222222, #0C0C0C);
 }
 
 .preview_up-shadow{
@@ -33,21 +89,11 @@ body{
     background-color: #0006;
 }
 
-.preview_bricks{
-    position: absolute;
-    top:0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    background-image: url(../images/bricks-background.png);
-    background-size: 8px 8px;
-}
-
 .preview_character{
     position: absolute;
     width: 100%;
     top: 20px;
-    bottom: 260px;
+    bottom: calc(120px + 25vh);
 }
 
 .preview_character_image{
@@ -64,7 +110,7 @@ body{
 
 .preview_name{
     position: absolute;
-    bottom: 160px;/*Расстояние от текста с лозунгом до низа превью*/
+    bottom: calc(90px + 15vh);
     right: 50px;
     left: 50px;
     text-align: center;
@@ -72,15 +118,15 @@ body{
 }
 
 .preview_name_h{
-    margin: -30px;
+    margin: -0px;
     color: #EEE;
-    font-size: 400%;
+    font-size: calc(5pt + 17vh);
 }
 
 .preview_name_losung{
-    margin: -10px;
+    margin: -7vh;
     color: #888;
-    font-size: 200%;
+    font-size: 10vh;
 }
 
 .preview_panel{
@@ -98,18 +144,20 @@ body{
 
 /*Остальная информация о роботе*/
 .info{
+    position: relative;
     left: 0px;
     right: 0px;
-    background-color: gray;
+    min-height: 1000px;
+    background-color: #1C1C1C;
+    background: radial-gradient(#222222, #0C0C0C);
 }
 
 .info_center{
     align-content: center;
     left: 0px;
     right: 0px;
-    max-width: 1000px; /*Ширина центральной части с инфой.*/
+    width: min(1200px, 95%); /*Ширина центральной части с инфой.*/
     margin: auto;
-    background-color: lightgray;
 }
 
 /*Нижняя панель с информацией*/
@@ -120,6 +168,7 @@ body{
     height: 100px;
     background-color: #222;
     background: linear-gradient(#181818, #000);
+    border: 8px solid black;
 }
 
 .bottom_text{
